cmake_minimum_required(VERSION 3.0)
project (reoutils)
include( "../../proclibs.cmake")
cleanAll()
if(NOT TARGET ${PROJECT_NAME})
        add_definitions(-DSIMULATION)
        #add_definitions(-DTMS320C64PX)
        add_definitions(-DTMS320C64X)
        add_definitions(-DLITTLE_ENDIAN_HOST)
	include_directories(${PROC_LIBS_ROOT})
	file(GLOB  SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.c ${CMAKE_CURRENT_SOURCE_DIR}/*.h )
	add_library(${PROJECT_NAME} SHARED  ${SOURCE_FILES})
#    target_link_libraries(${PROJECT_NAME})
endif()
